add gesture detection, choose menu by gesture

--- a/draw.html
+++ b/draw.html
@@ -9,7 +9,7 @@
 
 
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-      <script type="text/javascript" src="draw.js"></script>
+
       <link rel="stylesheet" href="draw.css" media="all">
 
 
@@ -17,22 +17,66 @@
 
 </head>
 
-<body>
+<body >
+        <canvas id="can"></canvas>
+
         <div class="circle" id= "mainMenu">
           <a href="#">
-          <i class="fa fa-bus fa-2x" aria-hidden="true"></i>Vehicle</a>
+          <i class="fa fa-bus fa-2x"></i>Vehicle</a>
           <a href="#">
-          <i class="fa fa-suitcase fa-2x"></i>Tools</a>
+          <i class="fa fa-wrench fa-2x"></i>Tools</a>
           <a href="#">
           <i class="fa fa-qq fa-2x"></i>Animals</a>
           <a href="#">
           <i class="fa fa-cutlery fa-2x"></i>Foods</a>
         </div>
 
+        <div class="circle" id= "submenuTools">
+          <a href="#">
+          <i class="fa fa-wrench fa-2x"></i>Wrench</a>
+          <a href="#">
+          <i class="fa fa-wrench fa-2x"></i>Saw</a>
+          <a href="#">
+          <i class="fa fa-wrench fa-2x"></i>Hammer</a>
+          <a href="#">
+          <i class="fa fa-wrench fa-2x"></i>Pliers</a>
+        </div>
+        <div class="circle" id= "submenuVehicle">
+          <a href="#">
+          <i class="fa fa-bus fa-2x"></i>Car</a>
+          <a href="#">
+          <i class="fa fa-bus fa-2x"></i>Truck</a>
+          <a href="#">
+          <i class="fa fa-bus fa-2x"></i>Bus</a>
+          <a href="#">
+          <i class="fa fa-bus fa-2x"></i>Sports</a>
+        </div>
+        <div class="circle" id= "submenuAnimals">
+          <a href="#">
+          <i class="fa fa-qq fa-2x"></i>Dog</a>
+          <a href="#">
+          <i class="fa fa-qq fa-2x"></i>Cat</a>
+          <a href="#">
+          <i class="fa fa-qq fa-2x"></i>Chicken</a>
+          <a href="#">
+          <i class="fa fa-qq fa-2x"></i>Penguin</a>
+        </div>
+        <div class="circle" id= "submenuFoods">
+          <a href="#">
+          <i class="fa fa-cutlery fa-2x"></i>Vegetable</a>
+          <a href="#">
+          <i class="fa fa-cutlery fa-2x"></i>Cheese</a>
+          <a href="#">
+          <i class="fa fa-cutlery fa-2x"></i>Bread</a>
+          <a href="#">
+          <i class="fa fa-cutlery fa-2x"></i>Meat</a>
+        </div>
 
 
 
-
+        <script type="text/javascript" src="structure.js"></script>
+        <script type="text/javascript" src="drawline.js"></script>
+        <script type="text/javascript" src="draw.js"></script>
 
 </body>
 
